@@ -1,5 +1,13 @@
 2010-09-14  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	Create euro.pf2 which supports most European languages.
+
+	* Makefile.am (grubdata_DATA): Add euro.pf2.
+	(euro.pf2): New target.
+	(CLEANFILES): Add euro.pf2.
+
+2010-09-14  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* configure.ac: Disable emu-usb by default to prevent inadvertent
 	device takeover.
 
